[gd_scene load_steps=4 format=3 uid="uid://5cd6y81grfcd"]

[ext_resource type="Script" uid="uid://c32b7ia8xyrto" path="res://src/scenes/ui/hud/ShopUi.gd" id="1_7lhdh"]
[ext_resource type="PackedScene" uid="uid://4acfqyigneek" path="res://src/scenes/ui/hud/SlotTemplate.tscn" id="2_pn5ou"]
[ext_resource type="PackedScene" uid="uid://bq53kqc67dfp3" path="res://src/scenes/ui/hud/ItemInfoPanel.tscn" id="3_cmkpl"]

[node name="ShopUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7lhdh")
slot_scene = ExtResource("2_pn5ou")

[node name="Main" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Container" type="MarginContainer" parent="Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Main/Container"]
layout_mode = 2

[node name="Panel1" type="Panel" parent="Main/Container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Main/Container/HBoxContainer/Panel1"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="Label" type="Label" parent="Main/Container/HBoxContainer/Panel1/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Your Items"

[node name="GridContainer" type="GridContainer" parent="Main/Container/HBoxContainer/Panel1/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
size_flags_stretch_ratio = 3.0
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 5

[node name="Panel2" type="Panel" parent="Main/Container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Main/Container/HBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="Panel2" type="Panel" parent="Main/Container/HBoxContainer/Panel2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Main/Container/HBoxContainer/Panel2/VBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Main/Container/HBoxContainer/Panel2/VBoxContainer/Panel2/VBoxContainer"]
layout_mode = 2
text = "Shop Items"

[node name="GridContainer" type="GridContainer" parent="Main/Container/HBoxContainer/Panel2/VBoxContainer/Panel2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
size_flags_stretch_ratio = 3.0
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 5

[node name="Panel3" type="Panel" parent="Main/Container/HBoxContainer/Panel2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Main/Container/HBoxContainer/Panel2/VBoxContainer/Panel3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Main/Container/HBoxContainer/Panel2/VBoxContainer/Panel3/VBoxContainer"]
layout_mode = 2
text = "Item Description"

[node name="ItemInfoPanel" parent="Main/Container/HBoxContainer/Panel2/VBoxContainer/Panel3/VBoxContainer" instance=ExtResource("3_cmkpl")]
layout_mode = 2
size_flags_vertical = 3

[node name="CloseButton" type="Button" parent="Main"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
offset_left = 445.0
offset_right = 480.0
offset_bottom = 31.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_hover_pressed_color = Color(0.921569, 0.792157, 0.0862745, 1)
theme_override_colors/font_hover_color = Color(0.921569, 0.792157, 0.0862745, 1)
theme_override_colors/font_outline_color = Color(0.921569, 0.792157, 0.0862745, 1)
theme_override_colors/font_color = Color(0.92281, 0.79395, 0.0870322, 1)
theme_override_constants/outline_size = 4
text = "X"

[connection signal="pressed" from="Main/CloseButton" to="." method="_on_close_button_pressed"]
